<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Customer_Information">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/iv_sky"
        android:src="@drawable/sky"
        android:scaleType="centerCrop"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:id="@+id/cv_info"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="30dp"
        app:cardElevation="6dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InfoPlaceCustemr"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="190dp"
            android:id="@+id/tv_info"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="270dp"
            android:id="@+id/iv_infoCity"
            android:src="@drawable/ic_user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_namePlace"
            android:text="@string/Tv_Place"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="190dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_namePlaceInfo"
            tools:text="الرياض"

            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="210dp"/>
        <!--     *************  -->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="270dp"
            android:id="@+id/iv_infoplace"
            android:src="@drawable/ic_user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameCityInfo"
            tools:text="حي النسيم"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="165dp"
            android:layout_marginLeft="200dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameCity"
            android:text="@string/tv_City"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="200dp"/>
        <!--     *************  -->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="270dp"
            android:id="@+id/iv_infoStreet"
            android:src="@drawable/ic_user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameStreetInfo"
            android:text="@string/tv_street"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="200dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameStreet"
            tools:text=":شارع التحلية"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="260dp"
            android:layout_marginLeft="190dp"/>
        <!-- ****************************-->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="110dp"
            android:id="@+id/iv_infoBilding"
            android:src="@drawable/ic_user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameBuilding"
            android:text="@string/tvNumberBuilding"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameBildingInfo"
            tools:text="بناية رقم 40"

            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="40dp"/>
        <!--********************-->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="110dp"
            android:id="@+id/iv_infoBilding1"
            android:src="@drawable/ic_user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameBuilding1"
            android:text="@string/tvNumberBuilding1"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameBildingInfo1"
            tools:text="طابق رقم 20"

            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="170dp"
            android:layout_marginLeft="30dp"/>
        <!-- ***************-->

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="110dp"
            android:id="@+id/iv_infoDepartment"
            android:src="@drawable/ic_user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameDepartment"
            android:text="@string/tvNumbrDepartment"
            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nameDepartment1"
            tools:text="شقة 12"

            android:textSize="15sp"
            android:textColor="@color/Gray"
            android:layout_marginTop="260dp"
            android:layout_marginLeft="60dp"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/btn_reply"
            android:background="@color/blue"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="30dp"
            android:text="@string/btnReply"
            android:textColor="@color/white"
            android:textSize="20dp"

            />

    </androidx.cardview.widget.CardView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fbtn_call"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_call"
        android:elevation="10dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
